# ChuQin-PyWebView

./: .editorconfig  README.md  build.py  build_linux.py  build_macos.py  build_windows.py  chuqin.spec  pyproject.toml
app/: main.py
app/config/: settings.py
launcher/: .gitignore  README.md  create_dock_shortcut.py
portal/: package.json  pnpm-lock.yaml
portal/src/: App.vue  index.html  main.ts
portal/src/views/dashboard/: Dashboard.vue
portal/src/views/tools/: GitConfigTool.vue  HEXTool.vue  MD5Tool.vue  TimestampTool.vue  URLTool.vue
